y.output
State 28 conflicts: 9 shift/reduce
State 41 conflicts: 9 shift/reduce
State 46 conflicts: 9 shift/reduce, 2 reduce/reduce
State 75 conflicts: 10 shift/reduce
State 132 conflicts: 9 shift/reduce
State 150 conflicts: 9 shift/reduce
State 151 conflicts: 9 shift/reduce
State 152 conflicts: 9 shift/reduce
State 178 conflicts: 1 shift/reduce
State 179 conflicts: 10 shift/reduce
State 189 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: code

    2 code: code_pros main

    3 code_pros: code_pros proc
    4          | code_pros func
    5          | %empty

    6 func: FUNC proc_id '(' get_arg ')' RETURN continue_func

    7 proc: PROC proc_id '(' get_arg ')' continue_proc

    8 main: PROC MAIN '(' ')' continue_proc

    9 get_arg: args_list

   10 args_list: no_args
   11          | yes_args

   12 yes_args: args ':' arg_type
   13         | yes_args ';' args ':' arg_type

   14 args: id
   15     | args ',' id

   16 no_args: %empty

   17 call_args: args_2
   18          | no_args

   19 args_2: expression
   20       | args_2 ',' expression

   21 arg_type: type

   22 continue_func: return_va '{' body the_ret '}'

   23 proc_id: id

   24 continue_proc: '{' body '}'

   25 body: statmentss

   26 return_va: TYPE_INT
   27          | TYPE_CHAR
   28          | TYPE_BOOL
   29          | TYPE_REAL
   30          | INT_PTR
   31          | CHAR_PTR
   32          | REAL_PTR

   33 the_ret: RETURN expression ';'

   34 statment: call semico
   35         | if_statment
   36         | for_statment
   37         | while_statment
   38         | initign_statment
   39         | var_decls
   40         | '{' statmentss '}'
   41         | %empty
   42         | func
   43         | proc

   44 semico: ';'

   45 statmentss: statmentss statment
   46           | statment

   47 var_decls: VAR ids ':' type ';'

   48 ids: ids ',' id
   49    | id

   50 initign_statment: lhs EQ expression semico

   51 if_statment: IF '(' expression ')' statment else_statment

   52 else_statment: ELSE statment
   53              | %empty

   54 while_statment: WHILE '(' expression ')' block

   55 for_statment: FOR '(' for_cond ')' block

   56 for_cond: init semico expression semico init

   57 init: lhs EQ expression

   58 block: '{' '}'
   59      | statment

   60 expression: expression PLUS expression
   61           | expression MINUS expression
   62           | expression MUL expression
   63           | expression DIVIDE expression
   64           | expression EQEQ expression
   65           | expression GT expression
   66           | expression GTE expression
   67           | expression LT expression
   68           | expression LTE expression
   69           | NOT expression
   70           | expression NOTEQ expression
   71           | expression OR expression
   72           | expression AND expression
   73           | '(' expression ')'
   74           | value

   75 lhs: id
   76    | ID '[' expression ']'

   77 value: id
   78      | boolean
   79      | string
   80      | char
   81      | real
   82      | int
   83      | len
   84      | call
   85      | ref
   86      | null

   87 type: TYPE_INT
   88     | TYPE_BOOL
   89     | TYPE_CHAR
   90     | TYPE_REAL
   91     | TYPE_STRING '[' int ']'
   92     | INT_PTR
   93     | CHAR_PTR
   94     | REAL_PTR

   95 id: ID
   96   | DEREF ID

   97 ref: AMP ID

   98 call: id '(' call_args ')'

   99 len: '|' id '|'
  100    | '|' string '|'

  101 boolean: BOOL_TRUE
  102        | BOOL_FALSE

  103 string: STRING

  104 char: CHAR

  105 real: REAL

  106 int: INT

  107 null: TYPE_NULL


Terminals, with rules where they appear

$end (0) 0
'(' (40) 6 7 8 51 54 55 73 98
')' (41) 6 7 8 51 54 55 73 98
',' (44) 15 20 48
':' (58) 12 13 47
';' (59) 13 33 44 47
'[' (91) 76 91
']' (93) 76 91
'{' (123) 22 24 40 58
'|' (124) 99 100
'}' (125) 22 24 40 58
error (256)
TYPE_BOOL (258) 28 88
TYPE_CHAR (259) 27 89
TYPE_INT (260) 26 87
TYPE_REAL (261) 29 90
TYPE_STRING (262) 91
INT_PTR (263) 30 92
CHAR_PTR (264) 31 93
REAL_PTR (265) 32 94
IF (266) 51
ELSE (267) 52
WHILE (268) 54
FOR (269) 55
PROC (270) 7 8
FUNC (271) 6
VAR (272) 47
MAIN (273) 8
RETURN (274) 6 33
TYPE_NULL (275) 107
BOOL_TRUE (276) 101
BOOL_FALSE (277) 102
REAL (278) 105
ID (279) 76 95 96 97
INT (280) 106
CHAR (281) 104
STRING (282) 103
AND (283) 72
DIVIDE (284) 63
EQ (285) 50 57
EQEQ (286) 64
GT (287) 65
GTE (288) 66
LT (289) 67
LTE (290) 68
MINUS (291) 61
NOT (292) 69
NOTEQ (293) 70
OR (294) 71
PLUS (295) 60
MUL (296) 62
AMP (297) 97
DEREF (298) 96


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
program (55)
    on left: 1, on right: 0
code (56)
    on left: 2, on right: 1
code_pros (57)
    on left: 3 4 5, on right: 2 3 4
func (58)
    on left: 6, on right: 4 42
proc (59)
    on left: 7, on right: 3 43
main (60)
    on left: 8, on right: 2
get_arg (61)
    on left: 9, on right: 6 7
args_list (62)
    on left: 10 11, on right: 9
yes_args (63)
    on left: 12 13, on right: 11 13
args (64)
    on left: 14 15, on right: 12 13 15
no_args (65)
    on left: 16, on right: 10 18
call_args (66)
    on left: 17 18, on right: 98
args_2 (67)
    on left: 19 20, on right: 17 20
arg_type (68)
    on left: 21, on right: 12 13
continue_func (69)
    on left: 22, on right: 6
proc_id (70)
    on left: 23, on right: 6 7
continue_proc (71)
    on left: 24, on right: 7 8
body (72)
    on left: 25, on right: 22 24
return_va (73)
    on left: 26 27 28 29 30 31 32, on right: 22
the_ret (74)
    on left: 33, on right: 22
statment (75)
    on left: 34 35 36 37 38 39 40 41 42 43, on right: 45 46 51 52 59
semico (76)
    on left: 44, on right: 34 50 56
statmentss (77)
    on left: 45 46, on right: 25 40 45
var_decls (78)
    on left: 47, on right: 39
ids (79)
    on left: 48 49, on right: 47 48
initign_statment (80)
    on left: 50, on right: 38
if_statment (81)
    on left: 51, on right: 35
else_statment (82)
    on left: 52 53, on right: 51
while_statment (83)
    on left: 54, on right: 37
for_statment (84)
    on left: 55, on right: 36
for_cond (85)
    on left: 56, on right: 55
init (86)
    on left: 57, on right: 56
block (87)
    on left: 58 59, on right: 54 55
expression (88)
    on left: 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74, on right:
    19 20 33 50 51 54 56 57 60 61 62 63 64 65 66 67 68 69 70 71 72
    73 76
lhs (89)
    on left: 75 76, on right: 50 57
value (90)
    on left: 77 78 79 80 81 82 83 84 85 86, on right: 74
type (91)
    on left: 87 88 89 90 91 92 93 94, on right: 21 47
id (92)
    on left: 95 96, on right: 14 15 23 48 49 75 77 98 99
ref (93)
    on left: 97, on right: 85
call (94)
    on left: 98, on right: 34 84
len (95)
    on left: 99 100, on right: 83
boolean (96)
    on left: 101 102, on right: 78
string (97)
    on left: 103, on right: 79 100
char (98)
    on left: 104, on right: 80
real (99)
    on left: 105, on right: 81
int (100)
    on left: 106, on right: 82 91
null (101)
    on left: 107, on right: 86


State 0

    0 $accept: . program $end

    $default  reduce using rule 5 (code_pros)

    program    go to state 1
    code       go to state 2
    code_pros  go to state 3


State 1

    0 $accept: program . $end

    $end  shift, and go to state 4


State 2

    1 program: code .

    $default  reduce using rule 1 (program)


State 3

    2 code: code_pros . main
    3 code_pros: code_pros . proc
    4          | code_pros . func

    PROC  shift, and go to state 5
    FUNC  shift, and go to state 6

    func  go to state 7
    proc  go to state 8
    main  go to state 9


State 4

    0 $accept: program $end .

    $default  accept


State 5

    7 proc: PROC . proc_id '(' get_arg ')' continue_proc
    8 main: PROC . MAIN '(' ')' continue_proc

    MAIN   shift, and go to state 10
    ID     shift, and go to state 11
    DEREF  shift, and go to state 12

    proc_id  go to state 13
    id       go to state 14


State 6

    6 func: FUNC . proc_id '(' get_arg ')' RETURN continue_func

    ID     shift, and go to state 11
    DEREF  shift, and go to state 12

    proc_id  go to state 15
    id       go to state 14


State 7

    4 code_pros: code_pros func .

    $default  reduce using rule 4 (code_pros)


State 8

    3 code_pros: code_pros proc .

    $default  reduce using rule 3 (code_pros)


State 9

    2 code: code_pros main .

    $default  reduce using rule 2 (code)


State 10

    8 main: PROC MAIN . '(' ')' continue_proc

    '('  shift, and go to state 16


State 11

   95 id: ID .

    $default  reduce using rule 95 (id)


State 12

   96 id: DEREF . ID

    ID  shift, and go to state 17


State 13

    7 proc: PROC proc_id . '(' get_arg ')' continue_proc

    '('  shift, and go to state 18


State 14

   23 proc_id: id .

    $default  reduce using rule 23 (proc_id)


State 15

    6 func: FUNC proc_id . '(' get_arg ')' RETURN continue_func

    '('  shift, and go to state 19


State 16

    8 main: PROC MAIN '(' . ')' continue_proc

    ')'  shift, and go to state 20


State 17

   96 id: DEREF ID .

    $default  reduce using rule 96 (id)


State 18

    7 proc: PROC proc_id '(' . get_arg ')' continue_proc

    ID     shift, and go to state 11
    DEREF  shift, and go to state 12

    $default  reduce using rule 16 (no_args)

    get_arg    go to state 21
    args_list  go to state 22
    yes_args   go to state 23
    args       go to state 24
    no_args    go to state 25
    id         go to state 26


State 19

    6 func: FUNC proc_id '(' . get_arg ')' RETURN continue_func

    ID     shift, and go to state 11
    DEREF  shift, and go to state 12

    $default  reduce using rule 16 (no_args)

    get_arg    go to state 27
    args_list  go to state 22
    yes_args   go to state 23
    args       go to state 24
    no_args    go to state 25
    id         go to state 26


State 20

    8 main: PROC MAIN '(' ')' . continue_proc

    '{'  shift, and go to state 28

    continue_proc  go to state 29


State 21

    7 proc: PROC proc_id '(' get_arg . ')' continue_proc

    ')'  shift, and go to state 30


State 22

    9 get_arg: args_list .

    $default  reduce using rule 9 (get_arg)


State 23

   11 args_list: yes_args .
   13 yes_args: yes_args . ';' args ':' arg_type

    ';'  shift, and go to state 31

    $default  reduce using rule 11 (args_list)


State 24

   12 yes_args: args . ':' arg_type
   15 args: args . ',' id

    ':'  shift, and go to state 32
    ','  shift, and go to state 33


State 25

   10 args_list: no_args .

    $default  reduce using rule 10 (args_list)


State 26

   14 args: id .

    $default  reduce using rule 14 (args)


State 27

    6 func: FUNC proc_id '(' get_arg . ')' RETURN continue_func

    ')'  shift, and go to state 34


State 28

   24 continue_proc: '{' . body '}'

    IF     shift, and go to state 35
    WHILE  shift, and go to state 36
    FOR    shift, and go to state 37
    PROC   shift, and go to state 38
    FUNC   shift, and go to state 6
    VAR    shift, and go to state 39
    ID     shift, and go to state 40
    DEREF  shift, and go to state 12
    '{'    shift, and go to state 41

    IF        [reduce using rule 41 (statment)]
    WHILE     [reduce using rule 41 (statment)]
    FOR       [reduce using rule 41 (statment)]
    PROC      [reduce using rule 41 (statment)]
    FUNC      [reduce using rule 41 (statment)]
    VAR       [reduce using rule 41 (statment)]
    ID        [reduce using rule 41 (statment)]
    DEREF     [reduce using rule 41 (statment)]
    '{'       [reduce using rule 41 (statment)]
    $default  reduce using rule 41 (statment)

    func              go to state 42
    proc              go to state 43
    body              go to state 44
    statment          go to state 45
    statmentss        go to state 46
    var_decls         go to state 47
    initign_statment  go to state 48
    if_statment       go to state 49
    while_statment    go to state 50
    for_statment      go to state 51
    lhs               go to state 52
    id                go to state 53
    call              go to state 54


State 29

    8 main: PROC MAIN '(' ')' continue_proc .

    $default  reduce using rule 8 (main)


State 30

    7 proc: PROC proc_id '(' get_arg ')' . continue_proc

    '{'  shift, and go to state 28

    continue_proc  go to state 55


State 31

   13 yes_args: yes_args ';' . args ':' arg_type

    ID     shift, and go to state 11
    DEREF  shift, and go to state 12

    args  go to state 56
    id    go to state 26


State 32

   12 yes_args: args ':' . arg_type

    TYPE_BOOL    shift, and go to state 57
    TYPE_CHAR    shift, and go to state 58
    TYPE_INT     shift, and go to state 59
    TYPE_REAL    shift, and go to state 60
    TYPE_STRING  shift, and go to state 61
    INT_PTR      shift, and go to state 62
    CHAR_PTR     shift, and go to state 63
    REAL_PTR     shift, and go to state 64

    arg_type  go to state 65
    type      go to state 66


State 33

   15 args: args ',' . id

    ID     shift, and go to state 11
    DEREF  shift, and go to state 12

    id  go to state 67


State 34

    6 func: FUNC proc_id '(' get_arg ')' . RETURN continue_func

    RETURN  shift, and go to state 68


State 35

   51 if_statment: IF . '(' expression ')' statment else_statment

    '('  shift, and go to state 69


State 36

   54 while_statment: WHILE . '(' expression ')' block

    '('  shift, and go to state 70


State 37

   55 for_statment: FOR . '(' for_cond ')' block

    '('  shift, and go to state 71


State 38

    7 proc: PROC . proc_id '(' get_arg ')' continue_proc

    ID     shift, and go to state 11
    DEREF  shift, and go to state 12

    proc_id  go to state 13
    id       go to state 14


State 39

   47 var_decls: VAR . ids ':' type ';'

    ID     shift, and go to state 11
    DEREF  shift, and go to state 12

    ids  go to state 72
    id   go to state 73


State 40

   76 lhs: ID . '[' expression ']'
   95 id: ID .

    '['  shift, and go to state 74

    $default  reduce using rule 95 (id)


State 41

   40 statment: '{' . statmentss '}'

    IF     shift, and go to state 35
    WHILE  shift, and go to state 36
    FOR    shift, and go to state 37
    PROC   shift, and go to state 38
    FUNC   shift, and go to state 6
    VAR    shift, and go to state 39
    ID     shift, and go to state 40
    DEREF  shift, and go to state 12
    '{'    shift, and go to state 41

    IF        [reduce using rule 41 (statment)]
    WHILE     [reduce using rule 41 (statment)]
    FOR       [reduce using rule 41 (statment)]
    PROC      [reduce using rule 41 (statment)]
    FUNC      [reduce using rule 41 (statment)]
    VAR       [reduce using rule 41 (statment)]
    ID        [reduce using rule 41 (statment)]
    DEREF     [reduce using rule 41 (statment)]
    '{'       [reduce using rule 41 (statment)]
    $default  reduce using rule 41 (statment)

    func              go to state 42
    proc              go to state 43
    statment          go to state 45
    statmentss        go to state 75
    var_decls         go to state 47
    initign_statment  go to state 48
    if_statment       go to state 49
    while_statment    go to state 50
    for_statment      go to state 51
    lhs               go to state 52
    id                go to state 53
    call              go to state 54


State 42

   42 statment: func .

    $default  reduce using rule 42 (statment)


State 43

   43 statment: proc .

    $default  reduce using rule 43 (statment)


State 44

   24 continue_proc: '{' body . '}'

    '}'  shift, and go to state 76


State 45

   46 statmentss: statment .

    $default  reduce using rule 46 (statmentss)


State 46

   25 body: statmentss .
   45 statmentss: statmentss . statment

    IF     shift, and go to state 35
    WHILE  shift, and go to state 36
    FOR    shift, and go to state 37
    PROC   shift, and go to state 38
    FUNC   shift, and go to state 6
    VAR    shift, and go to state 39
    ID     shift, and go to state 40
    DEREF  shift, and go to state 12
    '{'    shift, and go to state 41

    IF        [reduce using rule 41 (statment)]
    WHILE     [reduce using rule 41 (statment)]
    FOR       [reduce using rule 41 (statment)]
    PROC      [reduce using rule 41 (statment)]
    FUNC      [reduce using rule 41 (statment)]
    VAR       [reduce using rule 41 (statment)]
    RETURN    reduce using rule 25 (body)
    RETURN    [reduce using rule 41 (statment)]
    ID        [reduce using rule 41 (statment)]
    DEREF     [reduce using rule 41 (statment)]
    '{'       [reduce using rule 41 (statment)]
    '}'       reduce using rule 25 (body)
    '}'       [reduce using rule 41 (statment)]
    $default  reduce using rule 25 (body)

    func              go to state 42
    proc              go to state 43
    statment          go to state 77
    var_decls         go to state 47
    initign_statment  go to state 48
    if_statment       go to state 49
    while_statment    go to state 50
    for_statment      go to state 51
    lhs               go to state 52
    id                go to state 53
    call              go to state 54


State 47

   39 statment: var_decls .

    $default  reduce using rule 39 (statment)


State 48

   38 statment: initign_statment .

    $default  reduce using rule 38 (statment)


State 49

   35 statment: if_statment .

    $default  reduce using rule 35 (statment)


State 50

   37 statment: while_statment .

    $default  reduce using rule 37 (statment)


State 51

   36 statment: for_statment .

    $default  reduce using rule 36 (statment)


State 52

   50 initign_statment: lhs . EQ expression semico

    EQ  shift, and go to state 78


State 53

   75 lhs: id .
   98 call: id . '(' call_args ')'

    '('  shift, and go to state 79

    $default  reduce using rule 75 (lhs)


State 54

   34 statment: call . semico

    ';'  shift, and go to state 80

    semico  go to state 81


State 55

    7 proc: PROC proc_id '(' get_arg ')' continue_proc .

    $default  reduce using rule 7 (proc)


State 56

   13 yes_args: yes_args ';' args . ':' arg_type
   15 args: args . ',' id

    ':'  shift, and go to state 82
    ','  shift, and go to state 33


State 57

   88 type: TYPE_BOOL .

    $default  reduce using rule 88 (type)


State 58

   89 type: TYPE_CHAR .

    $default  reduce using rule 89 (type)


State 59

   87 type: TYPE_INT .

    $default  reduce using rule 87 (type)


State 60

   90 type: TYPE_REAL .

    $default  reduce using rule 90 (type)


State 61

   91 type: TYPE_STRING . '[' int ']'

    '['  shift, and go to state 83


State 62

   92 type: INT_PTR .

    $default  reduce using rule 92 (type)


State 63

   93 type: CHAR_PTR .

    $default  reduce using rule 93 (type)


State 64

   94 type: REAL_PTR .

    $default  reduce using rule 94 (type)


State 65

   12 yes_args: args ':' arg_type .

    $default  reduce using rule 12 (yes_args)


State 66

   21 arg_type: type .

    $default  reduce using rule 21 (arg_type)


State 67

   15 args: args ',' id .

    $default  reduce using rule 15 (args)


State 68

    6 func: FUNC proc_id '(' get_arg ')' RETURN . continue_func

    TYPE_BOOL  shift, and go to state 84
    TYPE_CHAR  shift, and go to state 85
    TYPE_INT   shift, and go to state 86
    TYPE_REAL  shift, and go to state 87
    INT_PTR    shift, and go to state 88
    CHAR_PTR   shift, and go to state 89
    REAL_PTR   shift, and go to state 90

    continue_func  go to state 91
    return_va      go to state 92


State 69

   51 if_statment: IF '(' . expression ')' statment else_statment

    TYPE_NULL   shift, and go to state 93
    BOOL_TRUE   shift, and go to state 94
    BOOL_FALSE  shift, and go to state 95
    REAL        shift, and go to state 96
    ID          shift, and go to state 11
    INT         shift, and go to state 97
    CHAR        shift, and go to state 98
    STRING      shift, and go to state 99
    NOT         shift, and go to state 100
    AMP         shift, and go to state 101
    DEREF       shift, and go to state 12
    '('         shift, and go to state 102
    '|'         shift, and go to state 103

    expression  go to state 104
    value       go to state 105
    id          go to state 106
    ref         go to state 107
    call        go to state 108
    len         go to state 109
    boolean     go to state 110
    string      go to state 111
    char        go to state 112
    real        go to state 113
    int         go to state 114
    null        go to state 115


State 70

   54 while_statment: WHILE '(' . expression ')' block

    TYPE_NULL   shift, and go to state 93
    BOOL_TRUE   shift, and go to state 94
    BOOL_FALSE  shift, and go to state 95
    REAL        shift, and go to state 96
    ID          shift, and go to state 11
    INT         shift, and go to state 97
    CHAR        shift, and go to state 98
    STRING      shift, and go to state 99
    NOT         shift, and go to state 100
    AMP         shift, and go to state 101
    DEREF       shift, and go to state 12
    '('         shift, and go to state 102
    '|'         shift, and go to state 103

    expression  go to state 116
    value       go to state 105
    id          go to state 106
    ref         go to state 107
    call        go to state 108
    len         go to state 109
    boolean     go to state 110
    string      go to state 111
    char        go to state 112
    real        go to state 113
    int         go to state 114
    null        go to state 115


State 71

   55 for_statment: FOR '(' . for_cond ')' block

    ID     shift, and go to state 40
    DEREF  shift, and go to state 12

    for_cond  go to state 117
    init      go to state 118
    lhs       go to state 119
    id        go to state 120


State 72

   47 var_decls: VAR ids . ':' type ';'
   48 ids: ids . ',' id

    ':'  shift, and go to state 121
    ','  shift, and go to state 122


State 73
